[package]
name = "scraper"
authors = ["Steven Hé (Sīchàng)"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"
clap = { version = "3.2.15", features = ["derive"] }
regex = "1.6.0"
reqwest = "0.11.11"
select = "0.5.0"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
    "parking_lot",
] }
toml = "0.5.9"
