[package]
name = "recursive_scraper"
authors = ["Steven Hé (Sīchàng)"]
version = "0.6.0"

categories = [
    "accessibility",
    "asynchronous",
    "command-line-utilities",
    "web-programming::http-client",
]
description = "Constant-frequency recursive CLI web scraper with frequency, filtering, file directory, and many other options for scraping HTML, images and other files."
edition = "2021"
keywords = ["crawler", "recursive", "scraper", "spider", "web"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SichangHe/scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
regex = "1.7"
reqwest = "0.11"
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
    "parking_lot",
] }
toml = "0.7"

[profile.release]
lto = true
